# JEPA-RobustViT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: index.html
hpc/: eval_all.sh  train_jepa.sh
results/: baseline_dino_seed0.json  baseline_dino_seed1.json  baseline_dino_seed2.json  baseline_mae_seed0.json  baseline_mae_seed1.json  baseline_mae_seed2.json  baselines.html  baselines.md  domain_shift_pathmnist_seed0.json  domain_shift_pathmnist_seed0.txt  domain_shift_pathmnist_seed1.json  domain_shift_pathmnist_seed1.txt  domain_shift_pathmnist_seed2.json  domain_shift_pathmnist_seed2.txt  linear_probe_pathmnist_seed0.json  linear_probe_pathmnist_seed1.json  linear_probe_pathmnist_seed2.json
scripts/: eval_baselines.py  eval_tta.py  evaluate_cifar.py  jepa_predictor.py  test_backbone.py  test_domain_shift.py  train_jepa.py  train_linear_probe.py  tta.py
src/: __init__.py
src/data/: chexpert_loader.py  cifar_loader.py  medmnist_loader.py
src/models/: classifier.py  ijepa_backbone.py
src/src/data/: cifar_loader.py
src/utils/: __init__.py  metrics.py  transforms.py
